<resources>
    <string name="app_name">My Grading Calculator</string>
    <string name="name">Kendall McCleary</string>
    <string name="course_and_section">CMSC 355, Spring 2020</string>

    <string name="long_input">Enter Points Here</string>
    <string name="short_input">Enter Points</string>

    <string name="ia_earned_view">Enter the Individual Assignment points earned: </string>
    <string name="ia_possible_view">Enter the Individual Assignment points possible:</string>

    <string name="team_earned_view">Enter the Team Project points earned: </string>
    <string name="team_possible_view">Enter the Team Project points possible:</string>

    <string name="midterm_earned_view">Enter the Midterm Exam points earned: </string>
    <string name="midterm_possible_view">Enter the Midterm Exam points possible:</string>

    <string name="final_earned_view">Enter the Final Exam points earned: </string>
    <string name="final_possible_view">Enter the Final Exam points possible:</string>

    <string name="button">Calculate</string>

    <string name="grade_view">Your course grade calculates to:</string>
</resources>

